--- a/9. Cấu trúc điều kiện 2/bài tập/[Bài tập] Luyện tập cấu trúc điều kiện 02/bài 4.html
+++ b/9. Cấu trúc điều kiện 2/bài tập/[Bài tập] Luyện tập cấu trúc điều kiện 02/bài 4.html
@@ -6,8 +6,10 @@
 </head>
 <body>
 <script>
-
+    let a=prompt('nhập a')
+    let b=prompt('nhập b')
+    let S= (a*b)
+    alert('S hình chữ nhật ='+ S)
 </script>
-
 </body>
 </html>
