--- a/11. Cấu trúc lặp 2/bài tập/[Bài tập] Luyện tập vòng lặp 01/bài 4.html
+++ b/11. Cấu trúc lặp 2/bài tập/[Bài tập] Luyện tập vòng lặp 01/bài 4.html
@@ -2,9 +2,26 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>Title</title>
 </head>
 <body>
-$END$
+<script>
+    let a ;
+    let b  ;
+    let count = 0
+    let c ;
+    a = 1
+    b = 1
+    while (count<=10){
+        c=a+b;
+        a=b
+        b=c
+        if (c%5===0){
+            console.log(c);
+            document.write('<br>')
+            count++;
+        }
+    }
+</script>
 </body>
 </html>
