--- a/11. Cấu trúc lặp 2/bài tập/[Bài tập] Luyện tập vòng lặp 01/bài 5.html
+++ b/11. Cấu trúc lặp 2/bài tập/[Bài tập] Luyện tập vòng lặp 01/bài 5.html
@@ -2,9 +2,32 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>Title</title>
 </head>
 <body>
-$END$
+<script>
+    let a ;
+    let b  ;
+    let count = 0
+    let c ;
+    let tong = 0 ;
+
+    a = 1
+    b = 1
+    while (count<=20){
+        c=a+b;
+        tong = tong +a
+          document.write(a);
+          document.write('<br>')
+        a=b;
+        b=c;
+
+        count++
+    }
+    document.write("tong la "+tong);
+
+
+
+</script>
 </body>
 </html>
