--- a/11. Cấu trúc lặp 2/bài tập/[Bài tập] Luyện tập vòng lặp 01/bài 3.html
+++ b/11. Cấu trúc lặp 2/bài tập/[Bài tập] Luyện tập vòng lặp 01/bài 3.html
@@ -5,6 +5,18 @@
     <title>Title</title>
 </head>
 <body>
+<script>
+    number = parseInt(prompt('Enter the number of terms: '));
+let a = 0, b = 1, c;
 
+console.log('Fibonacci Series:');
+
+for (let i = 1; i <= number; i++) {
+console.log(a);
+c = a + b;
+a= b;
+b = c;
+}
+</script>
 </body>
 </html>
