--- a/13. Mảng 2/bài tập/[Bài tập] Luyện tập mảng 01/bài 1.html
+++ b/13. Mảng 2/bài tập/[Bài tập] Luyện tập mảng 01/bài 1.html
@@ -6,18 +6,13 @@
 </head>
 <body>
 <script>
-    for (let i = 0; i < 5; i++) {
-        for (let a = 0; a <= i; a++) {
-            document.write('*');
+    let a= [1,2,3,4,56,67,92,10,89,12]
+    for (let i =0; i<=10;i++){
+        if(a[i]>=10){
+            console.log(a[i]);
         }
-        document.write('<br>')
+
     }
-
-   
-
-
-
 </script>
-
 </body>
 </html>
