--- a/13. Mảng 2/bài tập/[Bài tập] Luyện tập mảng 01/bài 2.html
+++ b/13. Mảng 2/bài tập/[Bài tập] Luyện tập mảng 01/bài 2.html
@@ -6,12 +6,12 @@
 </head>
 <body>
 <script>
-    let numbers = [-3, 5, 1, 3, 2, 10];
-    let max = numbers[0];
+    let a =[1,4,6,7,9,92,15,10,16,11]
+    let max = a[0];
     let index = 0;
-    for (let i = 1; i < numbers.length; i++) {
-        if (numbers[i] > max) {
-            max = numbers[i];
+    for (let i = 1; i < a.length; i++) {
+        if (a[i] > max) {
+            max = a[i];
             index = i;
         }
     }
