--- a/13. Mảng 2/bài tập/[Bài tập] Luyện tập mảng 01/bài 5.html
+++ b/13. Mảng 2/bài tập/[Bài tập] Luyện tập mảng 01/bài 5.html
@@ -6,18 +6,12 @@
 </head>
 <body>
 <script>
-    for (let i = 0; i < 5; i++) {
-        for (let a = 0; a <= i; a++) {
-            document.write('*');
+    let a=[0,1,2,-4,-5,-5,-7,-8]
+    for (let i =0; i<=8;i++) {
+        if (a[i] < 0) {
+           alert(a[i]);
         }
-        document.write('<br>')
     }
-
-   
-
-
-
 </script>
-
 </body>
 </html>
