--- a/13. Mảng 2/bài tập/[Bài tập] Luyện tập mảng 01/bài 6.html
+++ b/13. Mảng 2/bài tập/[Bài tập] Luyện tập mảng 01/bài 6.html
@@ -5,6 +5,12 @@
     <title>Title</title>
 </head>
 <body>
+<script>
+    let a = [5,6,7,8,9,2];
 
+    for (let i = 0; i <= a.length; i++) {
+
+    }
+</script>
 </body>
 </html>
