--- a/13. Mảng 2/bài tập/[Bài tập] Luyện tập mảng 01/bài 6.html
+++ b/13. Mảng 2/bài tập/[Bài tập] Luyện tập mảng 01/bài 6.html
@@ -6,11 +6,21 @@
 </head>
 <body>
 <script>
-    let a = [5,6,7,8,9,2];
-
-    for (let i = 0; i <= a.length; i++) {
-
+    let a= parseInt(prompt('nhập một sô nguyên n='));
+    let number=new Array(10);
+    for(let i=0;i<number.length;i++){
+        number[i]=parseInt(prompt('Nhập phần tử của mảng'+i));
     }
+    let result ="";
+    for(let i=0;i<number.length;i++){
+        if(a==number[i]){
+            result="V is in number";
+            break;
+        }else {
+            result="V is not in number";
+        }
+    }
+    document.write(result);
 </script>
 </body>
 </html>
