--- a/13. Mảng 2/bài tập/[Bài tập] Luyện tập mảng 02/bài 4.html
+++ b/13. Mảng 2/bài tập/[Bài tập] Luyện tập mảng 02/bài 4.html
@@ -6,11 +6,11 @@
 </head>
 <body>
 <script>
-    let str = "pham tran dang khoa";
+    let str = prompt("nhập vào một chuỗi")
 
     // Sử dụng split() để tách chuỗi -> từ
     let substrings = str.split(" ");
-
+let count=0
     console.log(substrings);
 
 </script>
