--- a/11. Cấu trúc lặp 2/bài tập/Bài tập] Luyện tập vòng lặp 02/bài 3.html
+++ b/11. Cấu trúc lặp 2/bài tập/Bài tập] Luyện tập vòng lặp 02/bài 3.html
@@ -6,18 +6,46 @@
 </head>
 <body>
 <script>
+    //Hình 1:
     for (let i = 0; i < 5; i++) {
         for (let a = 0; a <= i; a++) {
             document.write('*');
+        }document.write('</br>')
+    }document.write('</br>')
+
+    // Hình 2:
+
+    for (let i = 1; i <= 5; i++) {
+        for (let j = 5; j >= 1; j--) {
+            if (i > j) {
+                document.write("&ensp;");
+            } else {
+                document.write("*");
+            }
         }
-        document.write('<br>')
+        document.write('<br>');
     }
+    // Hình 3:
+    for (let i = 1; i <= 5; i ++) {
+        for (let j = 5; j >= 1; j--) {
+            if (j > i) {
+                document.write("&ensp;");
+            } else {
+                document.write("*");
+            }
+        }document.write("</br>");
 
-   
-
-
-
+    }document.write("</br>");
+    //     Hình 4:
+    for (let i = 0; i < 5; i++) {
+        for (let b =5-i; b < 5; b++) {
+            document.write('&nbsp;', '&nbsp;')
+        }
+        for (let a = 4; a >= i; a--) {
+            document.write('*');
+        }
+        document.write('<br>');
+    }
 </script>
-
 </body>
 </html>
