--- a/15. Hàm 2/bài tập/[Bài tập] Luyện tập tạo và sử dụng hàm 01/bài 1.html
+++ b/15. Hàm 2/bài tập/[Bài tập] Luyện tập tạo và sử dụng hàm 01/bài 1.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-<script>
+</html><script>
     function alertMessage(answer) {
         let result = " ";
         if (answer) {
@@ -21,4 +21,3 @@
 </script>
 
 </body>
-</html>
