--- a/15. Hàm 2/bài tập/[Bài tập] Luyện tập tạo và sử dụng hàm 01/bài 2.html
+++ b/15. Hàm 2/bài tập/[Bài tập] Luyện tập tạo và sử dụng hàm 01/bài 2.html
@@ -5,8 +5,15 @@
     <title>Title</title>
 </head>
 <body>
-<script>
 
+ <script>
+    function inputNumber(x) {
+          x++;
+        return x;
+    }
+    let y = parseInt(prompt("Nhập vào 1 số: "));
+    result = inputNumber(y);
+alert("Giá trị của số khi tăng lên 1 đơn vị là: " + result);
 </script>
 </body>
 </html>
