--- a/16. Lập trình hướng đối tượng 1/bài tâp/[Bài tập] Xây dựng lớp mô tả hình chữ nhật.html
+++ b/16. Lập trình hướng đối tượng 1/bài tâp/[Bài tập] Xây dựng lớp mô tả hình chữ nhật.html
@@ -51,6 +51,8 @@
     let hcnobj = canvas.getContext("2d");
     hcnobj.rect(100, 50, a, b);
     hcnobj.stroke();
+    hcnobj.fillStyle = "pink";
+    hcnobj.fill();
 
 
     // let hcnobj = new Rectangle(40, 20);
