--- a/bài 1c08.html
+++ b/bài 1c08.html
@@ -5,6 +5,9 @@
     <title>Title</title>
 </head>
 <body>
-
+<script>
+    let n = parseInt(prompt("nhập số lượng phần tử"));
+    
+</script>
 </body>
 </html>
